--- a/frontenddisplay/src/App.css
+++ b/frontenddisplay/src/App.css
@@ -1,38 +1,294 @@
-.App {
+body, html {
+  height: 100%;
+}
+
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0;
+  background-color: #f2f7f9;
+}
+
+@media (min-width: 800px) {
+  .App {
+    margin: 20px 140px;
+  }
+}
+
+.App .inner section#grid .wrapper {
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.App .inner section#grid .wrapper .portrait {
+  float: left;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  width: 49%;
+  position: relative;
+}
+
+.App .inner section#grid .wrapper .portrait:nth-child(2n) {
+  margin-right: 0;
+}
+
+.App .inner section#grid .wrapper .portrait img:hover {
+  opacity: .5;
+  -webkit-transform: scale(1.015);
+          transform: scale(1.015);
+}
+
+.App .inner section#grid .wrapper .portrait img {
+  width: 100%;
+  height: 253px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.App .inner section#grid .wrapper .landscape {
+  position: relative;
+  float: left;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  width: 100%;
+}
+
+.App .inner section#grid .wrapper .landscape:nth-child(1n) {
+  margin-right: 0;
+}
+
+.App .inner section#grid .wrapper .landscape img:hover {
+  opacity: .5;
+  -webkit-transform: scale(1.015);
+          transform: scale(1.015);
+}
+
+.App .inner section#grid .wrapper .landscape img {
+  width: 100%;
+  height: 225px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#grid .wrapper .portrait {
+    position: relative;
+    float: left;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    width: 24.25%;
+  }
+  .App .inner section#grid .wrapper .portrait:nth-child(4n) {
+    margin-right: 0;
+  }
+  .App .inner section#grid .wrapper .landscape {
+    position: relative;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    float: left;
+    margin-right: 0.5%;
+    margin-bottom: 0.5%;
+    width: 49.75%;
+  }
+  .App .inner section#grid .wrapper .landscape:nth-child(2n) {
+    margin-right: 0;
+  }
+  .App .inner section#grid .wrapper .landscape img {
+    height: 19vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
+.App .inner section#grid .wrapper .center-bottom-landscape {
+  position: absolute;
+  color: white;
+  left: 43%;
+  text-align: center;
+  bottom: 30px;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#grid .wrapper .center-bottom-landscape {
+    left: 45%;
+  }
+}
+
+.App .inner section#grid .wrapper .center-bottom-portrait {
+  position: absolute;
+  color: white;
+  left: 33%;
+  text-align: center;
+  bottom: 30px;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#grid .wrapper .center-bottom-portrait {
+    left: 30%;
+  }
+}
+
+.App .inner section#carousel .image-carousel {
+  height: 85vh;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel {
+    height: 50vh;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+}
+
+.App .inner section#carousel .image-carousel .coverimage {
+  background-color: #f2f7f9;
+}
+
+.App .inner section#carousel .image-carousel .coverimage img {
+  position: absolute;
+  width: 100%;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel .coverimage {
+    content: url("./images/desktop/TestimonialCoverImage_Desktop.png");
+    position: absolute;
+    width: 90%;
+    top: 45%;
+    left: 45%;
+    -webkit-transform: translate(-45%, -50%);
+            transform: translate(-45%, -50%);
+    padding-right: 0;
+  }
+}
+
+.App .inner section#carousel .image-carousel .inner {
+  position: relative;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel .inner {
+    width: 40%;
+    left: 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .inner section#carousel .image-carousel .inner .reisetopia-testimonials {
+  position: absolute;
+  display: none;
+  padding: 80px;
+  text-align: center;
+  top: 40vh;
+  font-size: 1.3rem;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel .inner .reisetopia-testimonials {
+    top: -5vh;
+    position: relative;
+    left: 155%;
+    font-size: 0.85rem;
+    text-align: left;
+  }
+}
+
+.App .inner section#carousel .image-carousel .inner .reisetopia-testimonials .quote {
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #767e8a;
+}
+
+.App .inner section#carousel .image-carousel .inner .reisetopia-testimonials .testimonials-author {
+  color: #5d6574;
+  font-style: bold;
+}
+
+.App .inner section#carousel .image-carousel .arrows {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  left: 37%;
+  text-align: center;
+  top: 78vh;
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel .arrows {
+    position: absolute;
+    top: 26vh;
+    padding-top: 1em;
+    left: 72.5%;
+    text-align: left;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.App .inner section#carousel .image-carousel .arrows .next {
+  top: 0;
+  padding-left: 5px;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel .arrows .next {
+    width: 28%;
+    left: 0;
+    height: auto;
+    top: 0;
+    padding-left: 2px;
+    content: url("./images/desktop/RightArrow_Desktop.png");
   }
-  to {
-    transform: rotate(360deg);
+  .App .inner section#carousel .image-carousel .arrows .next:hover {
+    color: #51A0D5;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0.8;
   }
 }
+
+.App .inner section#carousel .image-carousel .arrows .prev {
+  top: 0;
+  padding-right: 5px;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#carousel .image-carousel .arrows .prev {
+    width: 28%;
+    left: 0;
+    height: auto;
+    top: 0;
+    padding-right: 2px;
+    content: url("./images/desktop/LeftArrow_Desktop.png");
+  }
+  .App .inner section#carousel .image-carousel .arrows .prev:hover {
+    color: #51A0D5;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0.8;
+  }
+}
+
+.App .inner section#footer {
+  background-color: #f2f7f9;
+  text-align: center;
+  position: relative;
+}
+
+.App .inner section#footer img {
+  width: 20%;
+}
+
+@media (min-width: 800px) {
+  .App .inner section#footer {
+    content: url("./images/logo.png");
+    position: relative;
+    top: -5vh;
+    width: 10%;
+    left: 45%;
+    width: 10%;
+  }
+}
+/*# sourceMappingURL=App.css.map */
