--- a/frontenddisplay/src/App.css
+++ b/frontenddisplay/src/App.css
@@ -14,12 +14,12 @@ body {
   }
 }
 
-.App .inner section#grid .wrapper {
+.App section#grid .wrapper {
   padding: 10px;
   border-radius: 15px;
 }
 
-.App .inner section#grid .wrapper .portrait {
+.App section#grid .wrapper .portrait {
   float: left;
   margin-right: 2%;
   margin-bottom: 2%;
@@ -27,24 +27,24 @@ body {
   position: relative;
 }
 
-.App .inner section#grid .wrapper .portrait:nth-child(2n) {
+.App section#grid .wrapper .portrait:nth-child(2n) {
   margin-right: 0;
 }
 
-.App .inner section#grid .wrapper .portrait img:hover {
+.App section#grid .wrapper .portrait img:hover {
   opacity: .5;
   -webkit-transform: scale(1.015);
           transform: scale(1.015);
 }
 
-.App .inner section#grid .wrapper .portrait img {
+.App section#grid .wrapper .portrait img {
   width: 100%;
   height: 253px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.App .inner section#grid .wrapper .landscape {
+.App section#grid .wrapper .landscape {
   position: relative;
   float: left;
   margin-right: 2%;
@@ -52,17 +52,17 @@ body {
   width: 100%;
 }
 
-.App .inner section#grid .wrapper .landscape:nth-child(1n) {
+.App section#grid .wrapper .landscape:nth-child(1n) {
   margin-right: 0;
 }
 
-.App .inner section#grid .wrapper .landscape img:hover {
+.App section#grid .wrapper .landscape img:hover {
   opacity: .5;
   -webkit-transform: scale(1.015);
           transform: scale(1.015);
 }
 
-.App .inner section#grid .wrapper .landscape img {
+.App section#grid .wrapper .landscape img {
   width: 100%;
   height: 225px;
   -o-object-fit: cover;
@@ -70,17 +70,17 @@ body {
 }
 
 @media (min-width: 800px) {
-  .App .inner section#grid .wrapper .portrait {
+  .App section#grid .wrapper .portrait {
     position: relative;
     float: left;
     margin-right: 1%;
     margin-bottom: 1%;
     width: 24.25%;
   }
-  .App .inner section#grid .wrapper .portrait:nth-child(4n) {
+  .App section#grid .wrapper .portrait:nth-child(4n) {
     margin-right: 0;
   }
-  .App .inner section#grid .wrapper .landscape {
+  .App section#grid .wrapper .landscape {
     position: relative;
     margin-left: 5px;
     margin-bottom: 5px;
@@ -89,17 +89,17 @@ body {
     margin-bottom: 0.5%;
     width: 49.75%;
   }
-  .App .inner section#grid .wrapper .landscape:nth-child(2n) {
+  .App section#grid .wrapper .landscape:nth-child(2n) {
     margin-right: 0;
   }
-  .App .inner section#grid .wrapper .landscape img {
+  .App section#grid .wrapper .landscape img {
     height: 19vh;
     -o-object-fit: cover;
        object-fit: cover;
   }
 }
 
-.App .inner section#grid .wrapper .center-bottom-landscape {
+.App section#grid .wrapper .center-bottom-landscape {
   position: absolute;
   color: white;
   left: 43%;
@@ -108,12 +108,12 @@ body {
 }
 
 @media (min-width: 800px) {
-  .App .inner section#grid .wrapper .center-bottom-landscape {
+  .App section#grid .wrapper .center-bottom-landscape {
     left: 45%;
   }
 }
 
-.App .inner section#grid .wrapper .center-bottom-portrait {
+.App section#grid .wrapper .center-bottom-portrait {
   position: absolute;
   color: white;
   left: 33%;
@@ -122,12 +122,12 @@ body {
 }
 
 @media (min-width: 800px) {
-  .App .inner section#grid .wrapper .center-bottom-portrait {
+  .App section#grid .wrapper .center-bottom-portrait {
     left: 30%;
   }
 }
 
-.App .inner section#carousel .image-carousel {
+.App section#carousel .image-carousel {
   height: 85vh;
   width: 100%;
   overflow: hidden;
@@ -135,7 +135,7 @@ body {
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel {
+  .App section#carousel .image-carousel {
     height: 50vh;
     width: 100%;
     overflow: hidden;
@@ -143,17 +143,17 @@ body {
   }
 }
 
-.App .inner section#carousel .image-carousel .coverimage {
+.App section#carousel .image-carousel .coverimage {
   background-color: #f2f7f9;
 }
 
-.App .inner section#carousel .image-carousel .coverimage img {
+.App section#carousel .image-carousel .coverimage img {
   position: absolute;
   width: 100%;
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel .coverimage {
+  .App section#carousel .image-carousel .coverimage {
     content: url("./images/desktop/TestimonialCoverImage_Desktop.png");
     position: absolute;
     width: 90%;
@@ -165,19 +165,19 @@ body {
   }
 }
 
-.App .inner section#carousel .image-carousel .inner {
+.App section#carousel .image-carousel .inner {
   position: relative;
   text-align: center;
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel .inner {
+  .App section#carousel .image-carousel .inner {
     width: 40%;
     left: 0;
   }
 }
 
-.App .inner section#carousel .image-carousel .inner .reisetopia-testimonials {
+.App section#carousel .image-carousel .inner .reisetopia-testimonials {
   position: absolute;
   display: none;
   padding: 80px;
@@ -187,7 +187,7 @@ body {
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel .inner .reisetopia-testimonials {
+  .App section#carousel .image-carousel .inner .reisetopia-testimonials {
     top: -5vh;
     position: relative;
     left: 155%;
@@ -196,18 +196,18 @@ body {
   }
 }
 
-.App .inner section#carousel .image-carousel .inner .reisetopia-testimonials .quote {
+.App section#carousel .image-carousel .inner .reisetopia-testimonials .quote {
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
   color: #767e8a;
 }
 
-.App .inner section#carousel .image-carousel .inner .reisetopia-testimonials .testimonials-author {
+.App section#carousel .image-carousel .inner .reisetopia-testimonials .testimonials-author {
   color: #5d6574;
   font-style: bold;
 }
 
-.App .inner section#carousel .image-carousel .arrows {
+.App section#carousel .image-carousel .arrows {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -218,7 +218,7 @@ body {
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel .arrows {
+  .App section#carousel .image-carousel .arrows {
     position: absolute;
     top: 26vh;
     padding-top: 1em;
@@ -227,13 +227,13 @@ body {
   }
 }
 
-.App .inner section#carousel .image-carousel .arrows .next {
+.App section#carousel .image-carousel .arrows .next {
   top: 0;
   padding-left: 5px;
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel .arrows .next {
+  .App section#carousel .image-carousel .arrows .next {
     width: 28%;
     left: 0;
     height: auto;
@@ -241,21 +241,21 @@ body {
     padding-left: 2px;
     content: url("./images/desktop/RightArrow_Desktop.png");
   }
-  .App .inner section#carousel .image-carousel .arrows .next:hover {
+  .App section#carousel .image-carousel .arrows .next:hover {
     color: #51A0D5;
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    opacity: 0.8;
+    -webkit-transform: scale(1.15);
+            transform: scale(1.15);
+    opacity: 0.6;
   }
 }
 
-.App .inner section#carousel .image-carousel .arrows .prev {
+.App section#carousel .image-carousel .arrows .prev {
   top: 0;
   padding-right: 5px;
 }
 
 @media (min-width: 800px) {
-  .App .inner section#carousel .image-carousel .arrows .prev {
+  .App section#carousel .image-carousel .arrows .prev {
     width: 28%;
     left: 0;
     height: auto;
@@ -263,26 +263,26 @@ body {
     padding-right: 2px;
     content: url("./images/desktop/LeftArrow_Desktop.png");
   }
-  .App .inner section#carousel .image-carousel .arrows .prev:hover {
+  .App section#carousel .image-carousel .arrows .prev:hover {
     color: #51A0D5;
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    opacity: 0.8;
+    -webkit-transform: scale(1.15);
+            transform: scale(1.15);
+    opacity: 0.6;
   }
 }
 
-.App .inner section#footer {
+.App section#footer {
   background-color: #f2f7f9;
   text-align: center;
   position: relative;
 }
 
-.App .inner section#footer img {
+.App section#footer img {
   width: 20%;
 }
 
 @media (min-width: 800px) {
-  .App .inner section#footer {
+  .App section#footer {
     content: url("./images/logo.png");
     position: relative;
     top: -5vh;
