will add minor spelling adjustments

--- a/frontenddisplay/src/App.scss
+++ b/frontenddisplay/src/App.scss
@@ -74,7 +74,7 @@ section#grid {
         
         }
 
-        //similar adjustmnets to the ones above, applied to the landscape images
+        //similar adjustments to the ones above, applied to the landscape images
         .landscape {
             position: relative;
             @include grid(1,2%);
