--- a/frontenddisplay/src/App.css
+++ b/frontenddisplay/src/App.css
@@ -39,7 +39,7 @@ body {
 
 .App section#grid .wrapper .portrait img {
   width: 100%;
-  height: 253px;
+  height: 39vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -64,7 +64,7 @@ body {
 
 .App section#grid .wrapper .landscape img {
   width: 100%;
-  height: 225px;
+  height: 39vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -138,7 +138,6 @@ body {
   .App section#carousel .image-carousel {
     height: 50vh;
     width: 100%;
-    overflow: hidden;
     position: relative;
   }
 }
