--- a/frontenddisplay/src/App.scss
+++ b/frontenddisplay/src/App.scss
@@ -1,18 +1,22 @@
 $colors:(
-    primary: #f2f7f9
+    primary: #f2f7f9,
+    arrow:  #51A0D5,
+    quote: #767e8a,
+    author:#5d6574
 );
 
 $padding: 15px;
 $borders: 15px;
 $desktop: 800px;
 
+// allows us to highlight the 
 @function color($color-name){
     @return map-get($colors, $color-name);
 }
 
 //optimised for 1024px width - the mixin below specifies desktop versions which being at 800px width
-@mixin desktop {
-    @media (min-width: #{$desktop}){
+@mixin desktop { // mixin allows grouping of css declarations throughout the site
+    @media (min-width: $desktop){
         @content; 
     }
 }
@@ -21,11 +25,11 @@ $desktop: 800px;
 // margin between the columns
 
 @mixin grid ($cols, $mgn){
-    float: left;
-    margin-right: $mgn;
+    float: left; //left side of the container
+    margin-right: $mgn; //margin as a % of the width of the containing element
     margin-bottom: $mgn;
     width: ((100% - (($cols - 1) * $mgn)) / $cols); 
-    &:nth-child(#{$cols}n){
+    &:nth-child(#{$cols}n){ //makes the margin of the last column 0
         margin-right: 0;
     }
 }
@@ -44,7 +48,7 @@ body {
 
     //adjustment for the desktop version
     @include desktop {
-        margin: 20px 20px * 7;
+        margin: 20px 20px * 7; //first input is top and bottom whilst second input is left and right
     }
 
 
@@ -68,7 +72,7 @@ section#grid {
 
             img{
                 width: 100%;
-                height: 253px;
+                height: 39vh;
                 object-fit: cover;
             }
         
@@ -86,7 +90,7 @@ section#grid {
 
             img{
                 width: 100%;
-                height: 225px;
+                height: 39vh;
                 object-fit: cover;
             }
         }
@@ -94,7 +98,7 @@ section#grid {
         //adjustments for the desktop
         @include desktop {
             .portrait {
-                position: relative;
+                position: relative; //default is static. relative is relative to the default. absolute is in reference to ancestor
                 @include grid(4,1%)
             }
 
@@ -124,18 +128,18 @@ section#grid {
             }
           }
 
-          //will add captions onto the portrait pictures
-          .center-bottom-portrait {
-            position: absolute;   
-            color: white; 
-            left: 33%;
-            text-align: center;
-            bottom: 30px;
+        //will add captions onto the portrait pictures
+        .center-bottom-portrait {
+        position: absolute;   
+        color: white; 
+        left: 33%;
+        text-align: center;
+        bottom: 30px;
 
-            @include desktop {
-                left: 30%;
-            }
-          }
+        @include desktop {
+            left: 30%; //left margin is 30% of the width of the containing element
+        }
+        }
 
     }
 
@@ -152,7 +156,7 @@ section#carousel {
         @include desktop {
             height: 50vh;
             width: 100%;
-            overflow: hidden;
+            // overflow: hidden;
             position: relative;
         }
 
@@ -205,11 +209,11 @@ section#carousel {
                 .quote {
                     font-style: italic;
                     font-family: Arial, Helvetica, sans-serif;
-                    color: #767e8a
+                    color:color(quote);
                 }
 
                 .testimonials-author {
-                    color: #5d6574;
+                    color:color(author);
                     font-style: bold;
                 }
             }
@@ -245,7 +249,7 @@ section#carousel {
                     content: url('./images/desktop/RightArrow_Desktop.png');
 
                     &:hover {
-                        color: #51A0D5;
+                        color: color(arrow);
                         transform: scale(1.15);
                         opacity: 0.6;
                     }
@@ -266,7 +270,7 @@ section#carousel {
                     content: url('./images/desktop/LeftArrow_Desktop.png');
 
                     &:hover {
-                        color: #51A0D5;
+                        color: color(arrow);
                         transform: scale(1.15);
                         opacity: 0.6;
                     }
