--- a/frontenddisplay/src/App.scss
+++ b/frontenddisplay/src/App.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .App {
-
+overflow: auto;
     //adjustment for the desktop version
     @include desktop {
         margin: 0 20vh; //first input is top and bottom whilst second input is left and right
@@ -54,15 +54,10 @@ body {
 
 section#grid {
     overflow: auto;
-    padding: 10px 0;
 
     .wrapper {
         border-radius: $borders;
         width: 100%;
-
-        @include desktop {
-            display: table; 
-        }        
 
         .portrait{
             
@@ -87,9 +82,6 @@ section#grid {
         //similar adjustments to the ones above, applied to the landscape images
         .landscape {
             position: relative;
-            // @include grid(1,2%);
-            // width: 100%;
-            // top: 2%;
 
             img:hover {
                 opacity: .5;
@@ -148,12 +140,12 @@ section#grid {
 section#carousel {
 
     position: relative;
-
+    height: 50%;
+    
     //holds the arrow images for the carousel
     .image-carousel {
-        height: 85vh;
         width: 100%;
-        overflow: hidden;
+        display: table;
         position: relative;
 
         @include desktop {
@@ -168,9 +160,11 @@ section#carousel {
             background-color: color(primary);
             
             img{
-                position: absolute;
                 width: 100%;   
                 top: 2vh;
+                @include desktop {
+                    position: absolute;
+                }
             }
 
             @include desktop {
@@ -185,25 +179,31 @@ section#carousel {
         }
 
         .inner{
-            position: relative;
-            // float: left;            
-            z-index:3;
+            position: absolute;         
+            top: 60%;
+            height: 40%;
 
             @include desktop {
+                overflow: hidden;
+                position: relative;
                 width: 20%;
                 left: 72%;
                 height: 100%;
             }
 
             .reisetopia-testimonials{
-
-                position: absolute;
+                position: relative;
                 display: none;
-                top: 15%;
-                font-size: 1.3rem;
+                text-align: center;
+                width: 80%;
+                left: 11%; 
+                top: 10%;
+                font-size: 4vw;
 
                 @include desktop {
                     width: 15vw;
+                    top: 15%;
+                    left: 0;
                     font-size: 1.2vw;
                     text-align: left;
                 }
@@ -221,13 +221,14 @@ section#carousel {
             }
             
             .arrows{
-                //arrows in both directions
                 position: absolute;
                 display: flex;
-                z-index: 2;
-                
+                left: 37%;
+                top: 70%;
+
                 @include desktop {
                     top: 55%;
+                    left: 0;
                 }
     
                 //right arrow for next testimonial
@@ -279,10 +280,9 @@ section#carousel {
 //places logo at the middle of the footer
 section#footer {
     background-color: color(primary);
-    position: relative;
-    bottom: 0%;
-    left: 50%;
-    transform: translateX(-50%);
+    position: absolute;
+    width: 100%;
+    left: 40%;
 
     img{
         width: 20%;
@@ -291,6 +291,8 @@ section#footer {
     @include desktop {
         content: url('./images/logo.png');
         width: 10%;
+        left: 50%;
+        transform: translateX(-50%);        
     }
 }
 
